<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/second_screen"
        android:id="@+id/second_screen"
        android:icon="@drawable/ic_second_screen"
        app:showAsAction="never"
        android:orderInCategory="1"
        />
    <item
        android:title="@string/third_screen"
        android:id="@+id/third_screen"
        android:icon="@drawable/baseline_filter_3_24"
        app:showAsAction="never"
        android:orderInCategory="2"
        />
    <item
        android:title="@string/four_screen"
        android:id="@+id/four_screen"
        android:icon="@drawable/baseline_filter_4_24"
        app:showAsAction="never"
        android:orderInCategory="3"
        />

</menu>